profile/all api fix